--- a/frontend/src/app/Features/manage-users/manage-users.component.html
+++ b/frontend/src/app/Features/manage-users/manage-users.component.html
@@ -1,54 +1,52 @@
 <div class="manage-users-container">
-    <h2>Manage Users</h2>
-    <div class="add-user-button-container">
-        <button mat-button class="add-user-button" (click)="addUser()">+ Add User</button>
-      </div>
-    <table mat-table [dataSource]="users" class="mat-elevation-z8 table-con">
-      <!-- User Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> User Name </th>
-        <td mat-cell *matCellDef="let user"> {{user.name}} </td>
-      </ng-container>
-  
-      <!-- Contact Column -->
-      <ng-container matColumnDef="contact">
-        <th mat-header-cell *matHeaderCellDef> Contact Email/Phone </th>
-        <td mat-cell *matCellDef="let user"> {{user.contact}} </td>
-      </ng-container>
-  
-      <!-- University Column -->
-      <ng-container matColumnDef="university">
-        <th mat-header-cell *matHeaderCellDef> University </th>
-        <td mat-cell *matCellDef="let user"> {{user.university}} </td>
-      </ng-container>
-  
-      <!-- Status Column -->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let user">
-          <span [ngClass]="{ 'active': user.status === 'Active', 'inactive': user.status === 'Inactive' }">
-            {{ user.status }}
-          </span>
-        </td>
-      </ng-container>
-  
-      <!-- Actions Column -->
-      <!-- Actions Column -->
-    <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let user">
-          <button mat-icon-button color="primary" (click)="editUser(user)">
-            <mat-icon>edit</mat-icon> <!-- Edit Icon -->
-          </button>
-          <button mat-icon-button color="warn" (click)="deleteUser(user)">
-            <mat-icon>delete</mat-icon> <!-- Delete Icon -->
-          </button>
-        </td>
-      </ng-container>
-  
-      <!-- Header and Row Declarations -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+  <h2>Manage Users</h2>
+  <div class="add-user-button-container">
+    <button mat-button class="add-user-button" (click)="openDialog('add')">+ Add User</button>
   </div>
-  
+  <table mat-table [dataSource]="users" class="mat-elevation-z8 table-con">
+    <!-- User Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> User Name </th>
+      <td mat-cell *matCellDef="let user"> {{user.name}} </td>
+    </ng-container>
+
+    <!-- Contact Column -->
+    <ng-container matColumnDef="contact">
+      <th mat-header-cell *matHeaderCellDef> Contact Email/Phone </th>
+      <td mat-cell *matCellDef="let user"> {{user.contact}} </td>
+    </ng-container>
+
+    <!-- University Column -->
+    <ng-container matColumnDef="university">
+      <th mat-header-cell *matHeaderCellDef> University </th>
+      <td mat-cell *matCellDef="let user"> {{user.university}} </td>
+    </ng-container>
+
+    <!-- Status Column -->
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <td mat-cell *matCellDef="let user">
+        <span [ngClass]="{ 'active': user.status === 'Active', 'inactive': user.status === 'Inactive' }">
+          {{ user.status }}
+        </span>
+      </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let user">
+        <button mat-icon-button color="primary" (click)="openDialog('edit', user)">
+          <mat-icon>edit</mat-icon> <!-- Edit Icon -->
+        </button>
+        <button mat-icon-button color="warn" (click)="openDialog('delete', user)">
+          <mat-icon>delete</mat-icon> <!-- Delete Icon -->
+        </button>
+      </td>
+    </ng-container>
+
+    <!-- Header and Row Declarations -->
+    <tr mat-header-row *matHeaderRowDef="['name', 'contact', 'university', 'status', 'actions']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['name', 'contact', 'university', 'status', 'actions'];"></tr>
+  </table>
+</div>
