--- a/frontend/src/app/Features/manage-users/manage-users.component.html
+++ b/frontend/src/app/Features/manage-users/manage-users.component.html
@@ -13,7 +13,7 @@
     <!-- Contact Column -->
     <ng-container matColumnDef="contact">
       <th mat-header-cell *matHeaderCellDef> Contact Email/Phone </th>
-      <td mat-cell *matCellDef="let user"> {{user.contact}} </td>
+      <td mat-cell *matCellDef="let user"> {{user.email}} </td>
     </ng-container>
 
     <!-- University Column -->
