--- a/frontend/src/app/shared/nav/nav.component.scss
+++ b/frontend/src/app/shared/nav/nav.component.scss
@@ -81,8 +81,8 @@
 }
 
 .user-name {
-  margin-right: 5px;
-  font-weight: bold;
+  margin-right: 12px;
+  font-weight: normal;
 }
 
 .chevron-icon {
